update .gitignore and application.yml; enhance security configuration and add upload directory settings